[package]
name = "marc"
version = "1.5.0"
authors = ["AIkorsky <aikorsky@gmail.com>"]
description = "Reader and builder for MARC 21 Bibliographic format"
license = "MIT/Apache-2.0"
repository = "https://github.com/blackbeam/rust-marc"
documentation = "https://blackbeam.github.io/rust-marc"
readme = "README.md"
keywords = ["MARC", "MARC21", "bibliographic", "parser", "builder"]
exclude = [".*"]

[lib]
name = "marc"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true

[profile.doc]
opt-level = 0
debug = false

[features]
default = []
nightly = []

[dependencies]
error-chain = "^0.10.0"
