[package]
name = "marc"
version = "2.0.0"
authors = ["AIkorsky <aikorsky@gmail.com>"]
description = "Reader and builder for MARC 21 Bibliographic format"
license = "MIT/Apache-2.0"
repository = "https://github.com/blackbeam/rust-marc"
documentation = "https://blackbeam.github.io/rust-marc"
readme = "README.md"
keywords = ["MARC", "MARC21", "bibliographic", "parser", "builder"]
exclude = [".*"]
edition = "2018"

[lib]
name = "marc"
path = "src/lib.rs"

[features]
default = []
nightly = []
